--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "santigarcor/laratrust": "^8.3",
         "spatie/laravel-html": "^3.11",
         "tanmuhittin/laravel-google-translate": "^2.3",
-        "tymon/jwt-auth": "^2.1"
+        "tymon/jwt-auth": "^2.1",
+        "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
